Bug 279739 - When Git repo is up-to-date, Dolphin git plugin should say so
Summary: When Git repo is up-to-date, Dolphin git plugin should say so
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: plugins: git (other bugs)
Version First Reported In: 1.6.1
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-09 14:04 UTC by Shriramana Sharma
Modified: 2011-12-29 23:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shriramana Sharma 2011-08-09 14:04:31 UTC
Version:           1.6.1 (using KDE 4.6.2) 
OS:                Linux

If my local Git repo is up-to-date, doing git pull at the terminal says so.

However, the Dolphin Git plugin reports "Pulled branch master from origin successfully" in the status bar.

Could you please fix it so that when no pull has really occurred, it doesn't say as if one has occurred, but instead actually reports that the repo is up-to-date? Thanks.
 

Reproducible: Didn't try

Steps to Reproduce:
Open a Git repo in Dolphin that is actually up to date. Right click in the empty area of the pane. Click "Git pull". In the popup dialog, click Pull.

Actual Results:  
It says "Pulled branch master from origin successfully" in the status bar.

Expected Results:  
It should say "Already up to date" in the status bar.
Comment 1 Shriramana Sharma 2011-08-09 14:05:15 UTC
Um, that report says: "Reproducible: Didn't try". It's actually "Reproducible: Everytime"
Comment 2 Sebastian Dörner 2011-12-29 23:25:31 UTC
SVN commit 1270907 by doerner:

Parse output of "git pull". Show individual messages for up-to-date repository and merge conflicts.

FIXED-IN:4.9

 M  +20 -0     fileviewgitplugin.cpp  
 M  +6 -0      fileviewgitplugin.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1270907
Comment 3 Sebastian Dörner 2011-12-29 23:26:36 UTC
As this introduces a new string (which has to be translated), we couldn't get this in for 4.8, sorry.