Parse output of "git pull". Show individual messages for up-to-date repository and merge conflicts.

BUG:279739
FIXED-IN:4.9

svn path=/trunk/KDE/kdesdk/dolphin-plugins/; revision=1270907